--- a/WebScratchLearning/pom.xml
+++ b/WebScratchLearning/pom.xml
@@ -59,6 +59,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap</artifactId>
+		    <version>4.4.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
